--- a/client/pom.xml
+++ b/client/pom.xml
@@ -41,4 +41,9 @@
             </plugin>
         </plugins>
     </build>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 </project>
